force-app/main/default/objects/Candidate_Skill__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <label>Evidence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>