force-app/main/default/objects/Candidate_Skill__c/fields/Years__c.field-meta.xml
<CustomField>
    <fullName>Years__c</fullName>
    <label>Years</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>